--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -1,2 +1,8 @@
-body
-  background-color silver
+/*--------------------------------------------------------------------------------
+------------------------------------ Import -------------------------------------
+---------------------------------------------------------------------------------*/
+
+@import "default.styl"
+
+/*---------------------------------------------------------------------------------*/
+
