Ajuste de estilo a prefooter

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1,269 +1,235 @@
 
 /************** deafault css******************/
 
-.no-padding {
-    padding: 0 !important;
-}
+.no-padding
+    padding 0 !important
 
-.floatleft {
-    float: left
-}
+.floatleft
+    float left
+.floatright
+    float right
 
-.floatright {
-    float: right
-}
+.alignleft
+  float left
+  margin-right 15px
 
-.alignleft {
-    float: left;
-    margin-right: 15px;
-}
+.alignright
+  float right
+  margin-left 15px
 
-.alignright {
-    float: right;
-    margin-left: 15px;
-}
+.aligncenter
+  display block
+  margin 0 auto 15px
 
-.aligncenter {
-    display: block;
-    margin: 0 auto 15px;
-}
+a:focus
+  outline 0px solid
 
-.section_padding {}
 
-a:focus {
-    outline: 0px solid
-}
+a:hover
+  text-decoration none
 
-a:hover {
-    text-decoration: none
-}
 
-img {
-    max-width: 100%;
-    height: auto;
-}
+img
+  max-width 100%
+  height auto
 
-.fix {
-    overflow: hidden
-}
+.fix
+  overflow hidden
+
 
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
-    margin: 0 0 15px;
-    font-weight: 700;
-    font-family: 'Roboto', sans-serif;
-}
+h6
+  margin 0 0 15px
+  font-weight 700
+  font-family 'Roboto', sans-serif
 
-html,
-body {}
+.section_padding
+  padding: 80px 0px
 
-.section_padding {
-    padding: 80px 0px
-}
 
-p {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-}
+p
+  font-family 'Roboto', sans-serif
+  font-weight 400
+  font-size 14px
+
 /************** main css ******************/
 /************** header css ******************/
 
-#header_area {
-    background: url(../img/bg.jpg);
-    padding-top: 35px;
-    padding-bottom: 400px;
-    /*background-size: cover;*/
-    background-position: center center
-}
+#header_area
+    background url(../img/bg.jpg)
+    padding-top 35px
+    padding-bottom: 400px
+    background-position:center center
 
-.header_padding {
-    padding-top: 85px;
-}
 
-.logo {
-    margin-top: 0px;
-}
+.header_padding
+    padding-top 85px
 
-.logo h2 {}
 
-.logo h2 a {
-    color: #fff;
-    text-decoration: none
-}
+.logo
+    margin-top 0px
 
-.navbar-nav>li>a {
-    font-size: 18px;
-    color: #555;
-    font-family: 'Roboto', sans-serif;
-    /* text-transform: uppercase; */
-    font-weight: 700;
-}
+.navbar-nav>li>a
+    font-size: 18px
+    color: #555
+    font-family 'Roboto', sans-serif
+    font-weight 700
+
 
 .navbar-nav>li>a:hover,
 .navbar-nav>li>a:active,
-.navbar-nav>li>a:focus {
-    background: none
-}
+.navbar-nav>li>a:focus
+    background none
 
-.header_area_text {
-    text-align: center;
-    /*padding-top: 200px;
-    padding-bottom: 200px;
-    padding-right: 500px;*/
-}
 
-.header_area_text h2 {
-    font-size: 45px;
-    color: #555
-}
+.header_area_text
+  text-align center
+  p
+    color #555
+    margin 30px 0px
 
-.header_area_text p {
-    color: #555;
-    margin: 30px 0px;
-}
+  h2
+    font-size 45px
+    color #555
+
 
 /************** feature area css ******************/
 
-#features_area h2 {
+#features_area
+  h2
     color: #555;
     margin-bottom: 60px;
-}
 
-.single_feature {
-    padding: 15px;
-}
 
-.single_feature h3 {
-    margin-top: 35px;
-    color: #555;
-}
+.single_feature
+  padding: 15px;
+  h3
+    margin-top 35px
+    color: #555
 
-.single_feature i {
-    font-size: 50px;
-    padding: 20px;
-    color: #555;
-}
+  i
+    font-size 50px
+    padding 20px
+    color #555
+
+
+.single_feature h3
+    margin-top 35px
+    color: #555
+
+
+.single_feature i
+    font-size 50px
+    padding 20px
+    color #555
+
 /************** story area css ******************/
 
-#story_area {
-    background: #E9EBEA;
-}
+#story_area
+    background #E9EBEA
 
-.story_text {}
+
+.story_text
+  h2, story_text h2
+    margin-bottom 40px
+
 
 .story_text h2,
-.experience h2 {
-    margin-bottom: 40px;
-}
+.experience h2
+    margin-bottom 40px
+
 
 .story_text p,
-.experience p {
-    margin-bottom: 30px;
-}
+.experience p
+    margin-bottom 30px
 
-.story_text a {
-    border: 2px solid #333333;
-    border-radius: 5px;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #000;
-    margin-top: 20px;
-    text-transform: uppercase
-}
 
-.experience a {
-    border: 2px solid #fff;
-    border-radius: 5px;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #555;
-    margin-top: 20px;
-    text-transform: uppercase
-}
+.story_text
+  a
+    border 2px solid #333333
+    border-radius 5px
+    display inline-block
+    padding 10px 20px
+    color #000
+    margin-top 20px
+    text-transform uppercase
 
-.container_portfolio {
-    width: 100%;
-}
 
-.portfolio_img {
-    width: 100%;
-}
+.experience
+  a
+    border 2px solid #fff
+    border-radius 5px
+    display inline-block
+    padding 10px 20px
+    color #555
+    margin-top 20px
+    text-transform uppercase
 
-#portfolio_area {
-    background: #fff;
-    position: relative
-}
 
-#portfolio_area h2 {
-    margin-bottom: 15px;
-}
+.container_portfolio
+  width 100%
 
-#portfolio_area p {
+
+.portfolio_img
+  width 100%
+
+#portfolio_area
+  background #fff
+  position relative
+  p
     margin-bottom: 50px;
-}
+  h2
+    margin-bottom: 15px;
 
-.portfolio_content {
-    position: relative;
-}
 
-.portfolio_content h3 {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    top: 190px;
-    text-align: center;
-    font-size: 24px;
-    color: #fff;
-    line-height: 120px;
-    background: transparent;
-    text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.51);
-}
+.portfolio_content
+  position relative
+  margin-bottom: 0px;
+  p
+    border 2px solid #E3E3E3
+    padding 20px 40px
+  h3
+    position absolute
+    width 100%
+    height auto
+    top 190px
+    text-align center
+    font-size 24px
+    color #fff
+    line-height 120px
+    background transparent
+    text-shadow 0px 1px 4px rgba(0, 0, 0, 0.51)
 
-.portfolio_content {
-    margin-bottom: 0px;
-}
+.clients_say_list
+  margin-top 20px
 
-.clients_say_list {
-    margin-top: 20px;
-}
+.say
+  text-align: right;
+  width: 90%;
+  margin-top: 10px
+  h5
+    margin 0
+    color #000
+  h6
+    margin 0
+    color #666666
 
-.portfolio_content p {
-    border: 2px solid #E3E3E3;
-    padding: 20px 40px;
-}
-
-.say {
-    text-align: right;
-    width: 90%;
-    margin-top: 10px
-}
-
-.say h5 {
-    margin: 0;
-    color: #000
-}
-
-.say h6 {
-    margin: 0;
-    color: #666666
-}
 
 .c_img
-    width 10%
-    text-align right
+  width 10%
+  text-align right
 
-    img
-      border-radius 50%
+  img
+    border-radius 50%
 
 
 #Experience_area
-    background #353535
-    color #fff
+  background #353535
+  color #fff
 
 
 .skills
@@ -303,9 +269,9 @@ p {
 /************** call to action css ******************/
 
 #caal_to_action_area
-    background #E9EBEA
+    background #FF801A
     padding 30px 0px
-    color #555
+    color #fff
 
 
 .call_to_action_text h2
@@ -340,21 +306,43 @@ p {
     font-size 14px
     font-weight 300
 
+/**************** Buttons ***************/
+
 .btn-green
-    background #4ECB8C;
-    display inline-block
+  background #4ECB8C;
+  display inline-block
+  padding 10px 15px
+  text-transform uppercase
+  color #fff
+  font-weight 700
+  border-radius 5px
+
+  &:hover, &:focus
+    background #43926A
+    display: inline-block
     padding 10px 15px
     text-transform uppercase
     color #fff
     font-weight 700
     border-radius 5px
 
-    &:hover, &:focus
-      background #43926A
-      display: inline-block
-      padding 10px 15px
-      text-transform uppercase
-      color #fff
-      font-weight 700
-      border-radius 5px
+.btn-white-clear
+  background transparent
+  display inline-block
+  padding 10px 15px
+  text-transform uppercase
+  color #fff
+  font-weight 700
+  border 3px solid #fff
+  border-radius 5px
+
+  &:hover, &:focus
+    background #fff
+    display: inline-block
+    padding 10px 15px
+    text-transform uppercase
+    color #FF801A
+    font-weight 700
+    border-radius 5px
+    border 3px solid #fff
 
