template home partial

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -22,7 +22,7 @@
   margin 0 auto 15px
 
 a:focus
-  outline 0px solid
+  outline 0 solid
 
 
 a:hover
@@ -48,7 +48,7 @@ h6
   font-family 'Roboto', sans-serif
 
 .section_padding
-  padding: 80px 0px
+  padding: 80px 0
 
 
 p
@@ -71,7 +71,7 @@ p
 
 
 .logo
-    margin-top 0px
+    margin-top 0
 
 .navbar-nav>li>a
     font-size: 18px
@@ -90,7 +90,7 @@ p
   text-align center
   p
     color #555
-    margin 30px 0px
+    margin 30px 0
 
   h2
     font-size 45px
@@ -181,14 +181,14 @@ p
   background #fff
   position relative
   p
-    margin-bottom: 50px;
+    margin-bottom: 50px
   h2
-    margin-bottom: 15px;
+    margin-bottom: 15px
 
 
 .portfolio_content
   position relative
-  margin-bottom: 0px;
+  margin-bottom: 0
   p
     border 2px solid #E3E3E3
     padding 20px 40px
@@ -202,7 +202,7 @@ p
     color #fff
     line-height 120px
     background transparent
-    text-shadow 0px 1px 4px rgba(0, 0, 0, 0.51)
+    text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)
 
 .clients_say_list
   margin-top 20px
@@ -255,7 +255,7 @@ p
 
 
 .single_blog p
-    margin 10px 0px
+    margin 10px 0
 
 
 .comment_area
@@ -270,7 +270,7 @@ p
 
 #caal_to_action_area
     background #FF801A
-    padding 30px 0px
+    padding 30px 0
     color #fff
 
 
@@ -281,7 +281,7 @@ p
 
 #footer_area
     background #444
-    padding 30px 0px
+    padding 30px 0
     color #fff
 
 .divider_footer
