add templates for page, single, contact, blog,

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm-4 no-padding">
                 <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <a href="#">
+                    <a href="*">
                         <h3>Mercado Móvil</h3>
                         <img class="portfolio_img" src="../img/mm.jpg">
                     </a>
@@ -157,7 +157,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="call_project text-right wow slideInRight" data-wow-duration="2s">
-                    <a href="#" class="btn-white-clear">Comenzar mi proyecto</a>
+                    <a href="*" class="btn-white-clear">Comenzar mi proyecto</a>
                 </div>
             </div>
         </div>
