--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
-<section id="portfolio_area" class="section_padding">
-    <div class="container">
+<section id="portfolio_area" class="section_padding no-padding">
+    <div class="container container-portfolio">
         <div class="row">
             <div class="col-sm-4 no-padding">
                 <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
