--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,42 +1,12 @@
 <section id="portfolio_area" class="section_padding">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 no-padding">
+            <div class="col-sm-4 no-padding" ng-repeat="project in home.projects.results">
                 <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <a href="*">
-                        <h3>Mercado Móvil</h3>
+                    <a ui-sref="post_detail({slug: project.slug})">
+                        <h3>{{ project.title }}</h3>
                         <img class="portfolio_img" src="../img/mm.jpg">
                     </a>
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Periódico la verdad</h3>
-                    <img class="portfolio_img" src="../img/periodico-la-verdad.png">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Dachvill</h3>
-                    <img class="portfolio_img" src="../img/dachvill.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Super 24</h3>
-                    <img class="portfolio_img" src="../img/super24.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Ofertas la Ciénega</h3>
-                    <img class="portfolio_img" src="../img/ofertas-cienega.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Corredor Insurgentes</h3>
-                    <img class="portfolio_img" src="../img/corredor.jpg">
                 </div>
             </div>
         </div>
