--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="story_image wow slideInLeft" data-wow-duration="2s">
-                    <img src="../img/work-team.png" alt="">
+                    <img src="{{ home.featured_post.featuredImage }}" alt="{{ home.featured_post.title }}">
                 </div>
             </div>
             <div class="col-md-6">
