--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,14 +19,14 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="story_image wow slideInLeft" data-wow-duration="2s">
-                    <img src="{{ home.featured_post.featuredImage }}" alt="{{ home.featured_post.title }}">
+                    <img ng-src="{{ home.featuredPost.featuredImage }}" alt="{{ home.featured_post.title }}">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="story_text wow slideInRight" data-wow-duration="2s">
                     <h2>{{ home.featuredPost.title }}</h2>
+                    <div ng-bind-html="home.featuredPost.excerpt"></div>
 
-                    <p>{{ home.featuredPost.excerpt }}</p>
                     <a ui-sref="post_detail({slug: home.featuredPost.slug})">Más a cerca de nosotros</a>
                 </div>
             </div>
