change main menu urls, move slider area to home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,3 +1,21 @@
+<!-- slider -->
+<div id="slider-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 header-margin">
+                <div class="slider-area-text">
+                    <h2 class="wow slideInUp" data-wow-duration="2s">Tu consultor tecnológico</h2>
+
+                    <p class="wow slideInUp" data-wow-duration="3s">Te ayudamos a revolucionar tu empresa, adentrandose
+                        en el mundo digital </p>
+                    <a class="btn-green wow slideInUp" data-wow-duration="3s" href="*">Hablanos de tu
+                        proyecto </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <section id="portfolio_area" class="section_padding no-padding">
     <div class="container container-portfolio">
         <div class="row">
