--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -3,6 +3,7 @@
 ---------------------------------------------------------------------------------*/
 
 @import "default.styl"
+@import "responsive.styl"
 
 /*---------------------------------------------------------------------------------*/
 
