--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -76,6 +76,26 @@ p
       float left
       height auto
 
+    .navbar-toggle
+      position relative
+      float right
+      padding 9px 10px
+      margin-top 8px
+      margin-right 15px
+      margin-bottom 8px
+      background-color #4ECB8C
+      background-image none
+      border 1px solid transparent
+      border-radius 4px
+
+    .icon-bar
+      display block
+      width 22px
+      height 2px
+      border-radius 1px
+      background #fff
+
+
 /************** header css ******************/
 
 #slider-area
@@ -221,6 +241,10 @@ p
     line-height 120px
     background transparent
     text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)
+
+#clients_area
+  .title
+    color: #949494;
 
 .clients_say_list
   margin-top 20px
