--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Clientes</h2>
+                <h2 class="title">Nuestros Clientes</h2>
             </div>
         </div>
         <div class="row">
