--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,1 +1,16 @@
-blog <a ui-sref="post_detail({slug: post.list.results[0].slug})">detail</a>
+
+<section id="content-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="title">< Blog ></h2>
+                <hr class="divider"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 content-pages">
+                <a ui-sref="post_detail({slug: post.list.results[0].slug})">detail</a>
+            </div>
+        </div>
+    </div>
+</section>
