--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
                     <h2 class="wow slideInUp" data-wow-duration="2s">Tu consultor tecnológico</h2>
 
                     <p class="wow slideInUp" data-wow-duration="3s">Te ayudamos a revolucionar tu empresa, adentrandose
-                        en el mundo digital </p>
+                        en el mundo digital. </p>
                     <a class="btn-green wow slideInUp" data-wow-duration="3s" href="*">Hablanos de tu
                         proyecto </a>
                 </div>
@@ -85,6 +85,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2 class="title">Nuestros Clientes</h2>
+                <h4 class="title">El buen servicio y los buenos resultados conducen a la confianza</h4>
             </div>
         </div>
         <div class="row">
