--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -20,6 +20,8 @@
 .aligncenter
   display block
   margin 0 auto 15px
+.padding
+  padding 20px 0
 
 a:focus
   outline 0 solid
@@ -245,6 +247,8 @@ p
 #clients_area
   .title
     color: #949494;
+  h4.title
+    font-weight 400
 
 .clients_say_list
   margin-top 20px
@@ -307,6 +311,19 @@ p
 .date i,
 .comment i
     margin-right 10px
+
+
+/************** content area default ****************/
+
+#content-area
+  margin 200px 0px 60px
+  .title
+    color #737373
+  .divider
+    border: 1px solid #f5f5f5;
+  .content-pages
+    padding 20px 0
+
 
 /************** call to action css ******************/
 
