--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,1 +1,46 @@
-contact
+<section id="content-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="title">< Contacto ></h2>
+                <hr class="divider"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 content-pages">
+                <div class="container">
+                    <p class="title">Llena el siguiente formulario y describe cuales son tus dudas o que proyecto tienes
+                        en
+                        mente, al enviar tu mensaje nos contactámos contigo lo más rápido posible, gracias por tu
+                        confianza.</p>
+
+                    <form class="padding" action="">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="name">Nombre</label>
+                                <input type="text" class="form-control" id="name" placeholder="Nombre">
+                            </div>
+                            <div class="form-group">
+                                <label for="mail">Correo electrónico</label>
+                                <input type="email" class="form-control" id="mail" placeholder="Correo electrónico">
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Teléfono</label>
+                                <input type="number" class="form-control" id="phone" placeholder="Teléfono">
+                            </div>
+                        </div>
+                        <div class="col-md-6 ">
+                            <div class="form-group">
+                                <label for="text">Escribenos cuales son tus necesidades</label>
+                                <textarea class="form-control" id="text" rows="6"></textarea>
+                            </div>
+                            <div class="pull-right">
+                                <button type="submit" class="btn btn-green">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
