--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -1,1 +1,15 @@
-page
+<section id="content-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="title">< Page title ></h2>
+                <hr class="divider"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 content-pages">
+                <!--content here-->
+            </div>
+        </div>
+    </div>
+</section>
