--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -14,25 +14,25 @@
                         mente, al enviar tu mensaje nos contactámos contigo lo más rápido posible, gracias por tu
                         confianza.</p>
 
-                    <form class="padding" action="">
+                    <form class="padding" action="#" method="post">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="name">Nombre</label>
-                                <input type="text" class="form-control" id="name" placeholder="Nombre">
+                                <label for="name">Nombre *</label>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" required>
                             </div>
                             <div class="form-group">
-                                <label for="mail">Correo electrónico</label>
-                                <input type="email" class="form-control" id="mail" placeholder="Correo electrónico">
+                                <label for="email">Correo electrónico *</label>
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Correo electrónico" required>
                             </div>
                             <div class="form-group">
-                                <label for="phone">Teléfono</label>
-                                <input type="number" class="form-control" id="phone" placeholder="Teléfono">
+                                <label for="phone1">Teléfono *</label>
+                                <input type="text" class="form-control" id="phone1" name="phone1" placeholder="Teléfono" required>
                             </div>
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <label for="text">Escribenos cuales son tus necesidades</label>
-                                <textarea class="form-control" id="text" rows="6"></textarea>
+                                <label for="message">Escribenos cuales son tus necesidades *</label>
+                                <textarea class="form-control" id="message" name="message" rows="6" placeholder="Escribe tu mensaje aquí" required></textarea>
                             </div>
                             <div class="pull-right">
                                 <button type="submit" class="btn btn-green">Enviar</button>
