--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -64,7 +64,7 @@ p
     position absolute
     background #EBEBEB
     padding 20px 0
-    top 0px
+    top 0
     left 0
     right 0
     z-index 99999
