--- a/app/css/main.css
+++ b/app/css/main.css
@@ -60,7 +60,7 @@ p {
   position: absolute;
   background: #ebebeb;
   padding: 20px 0;
-  top: 0px;
+  top: 0;
   left: 0;
   right: 0;
   z-index: 99999;
