--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -18,21 +18,25 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="name">Nombre *</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" required>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
+                                       required ng-model="contact.formData.name">
                             </div>
                             <div class="form-group">
                                 <label for="email">Correo electrónico *</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Correo electrónico" required>
+                                <input type="email" class="form-control" id="email" name="email"
+                                       placeholder="Correo electrónico" required ng-model="contact.formData.email">
                             </div>
                             <div class="form-group">
                                 <label for="phone1">Teléfono *</label>
-                                <input type="text" class="form-control" id="phone1" name="phone1" placeholder="Teléfono" required>
+                                <input type="text" class="form-control" id="phone1" name="phone1" placeholder="Teléfono"
+                                       required ng-model="contact.formData.phone1">
                             </div>
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
                                 <label for="message">Escribenos cuales son tus necesidades *</label>
-                                <textarea class="form-control" id="message" name="message" rows="6" placeholder="Escribe tu mensaje aquí" required></textarea>
+                                <textarea class="form-control" id="message" name="message" rows="6"
+                                          placeholder="Escribe tu mensaje aquí" required ng-model="contact.formData.message"></textarea>
                             </div>
                             <div class="pull-right">
                                 <button type="submit" class="btn btn-green">Enviar</button>
